--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.2"
+rayon = "1.11.0"
+sysinfo = "0.29"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "plotters"] }
